[ADD] New context and tests cases