@@ -2,25 +2,48 @@ package org.helmer.appmockito.ejemplos.services;
 
 import org.helmer.appmockito.ejemplos.dao.ExamenRepository;
 import org.helmer.appmockito.ejemplos.dao.ExamenRepositoryImpl;
-import org.helmer.appmockito.ejemplos.dao.ExamenRepositoryOtro;
+import org.helmer.appmockito.ejemplos.dao.PreguntasRepository;
 import org.helmer.appmockito.ejemplos.models.Examen;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.mockito.Mockito;
 
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.Mockito.*;
 
 class ExamenServicesImplTest {
+ //Aca se crea una instancia de la interfaz ExamenRepository
+    ExamenRepository examenRepository;
+
+    PreguntasRepository preguntasRepository;
+    //Aca se crea una instancia de la clase ExamenServicesImpl
+    ExamenServicios examenServices;
+
+    @BeforeEach
+    void setUp() {
+        //Aca inicializamos para que se pueda reutilizar en cada test
+        examenRepository = mock(ExamenRepository.class);
+        preguntasRepository = mock(PreguntasRepository.class);
+        examenServices = new ExamenServicesImpl(examenRepository, preguntasRepository);
+    }
+
     //este es un test reaizado con JUnit 5
     @Test
-    void buscarExamenPorNombreTest() {
+    void testConJunit() {
         //Primero creamos una instancia de la interfaz ExamenRepository
         ExamenRepository examenRepository = new ExamenRepositoryImpl();
+        PreguntasRepository preguntasRepository1 = new PreguntasRepository() {
+            @Override
+            public List<String> findPreguntasPorExamenId(Long id) {
+                return null;
+            }
+        };
         //Creamos una instancia de la clase ExamenServicesImpl
-        ExamenServicesImpl examenServices = new ExamenServicesImpl(examenRepository);
+        ExamenServicesImpl examenServices = new ExamenServicesImpl(examenRepository, preguntasRepository1);
         //Creamos una instancia de la clase Examen
         Optional<Examen> examen = examenServices.buscarExamenPorNombre("Matematicas");
         //Comprobamos que el nombre del examen sea igual a "Matematicas"
@@ -52,56 +75,58 @@ class ExamenServicesImplTest {
      *
      * En resumen, este método de prueba está utilizando un mock de 'ExamenRepository' para simular su comportamiento y aislar la funcionalidad de 'ExamenServicesImpl' que se está probando.
      */
+
     @Test
     void testConMockito() {
         //Creamos una instancia de la interfaz ExamenRepository con mockito
-        ExamenRepository examenRepository = Mockito.mock(ExamenRepository.class);
-        ExamenServicios examenServices = new ExamenServicesImpl(examenRepository);
 
         List<Examen> datos = Arrays.asList(
-                        new Examen(5L, "Matematicas"),
-                        new Examen(6L, "Lenguaje")
-                );
+                new Examen(5L, "Matematicas"),
+                new Examen(6L, "Lenguaje")
+        );
+
+        List<String> preguntas = Arrays.asList("aritmetica", "integrales", "derivadas", "geometria");
+
         //Cuando se llame al metodo findAll() de la interfaz ExamenRepository, se devolvera la lista datos
-        Mockito.when(examenRepository.findAll()).thenReturn(datos);
-        //cuando se llame devuelva vacio
+        when(examenRepository.findAll()).thenReturn(datos);
+        when(preguntasRepository.findPreguntasPorExamenId(5L)).thenReturn(preguntas);
+        when(preguntasRepository.findPreguntasPorExamenId(6L)).thenReturn(preguntas);
         //Mockito.when(examenRepository.findAll()).thenReturn(Arrays.asList());
 
         Optional<Examen> examen = examenServices.buscarExamenPorNombre("Matematicas");
+        Examen preguntasExamen = examenServices.findExamenPorNombreConPreguntas("Matematicas");
+
         assertEquals("Matematicas", examen.orElseThrow().getNombre());
+        assertEquals( "aritmetica", preguntasExamen.getPreguntas().get(0));
 
 
     }
 
     @Test
     void testConMockito2() {
-        //Creamos una instancia de la interfaz ExamenRepository con mockito
-        ExamenRepository examenRepository = Mockito.mock(ExamenRepositoryOtro.class);
-        ExamenServicios services = new ExamenServicesImpl(examenRepository);
 
         List<Examen> datos = Arrays.asList(
                 new Examen(5L, "Matematicas"),
                 new Examen(6L, "Lenguaje")
         );
         //Cuando se llame al metodo findAll() de la interfaz ExamenRepository, se devolvera la lista datos
-        Mockito.when(examenRepository.findAll()).thenReturn(datos);
+        when(examenRepository.findAll()).thenReturn(datos);
 
-        Optional<Examen> examen = services.buscarExamenPorNombre("Matematicas");
+        Optional<Examen> examen = examenServices.buscarExamenPorNombre("Matematicas");
         assertNotNull(examen);
         assertEquals("Matematicas", examen.orElseThrow().getNombre());
 
     }
+
     @Test
     void testConMockitoVacio() {
-        //Creamos una instancia de la interfaz ExamenRepository con mockito
-        ExamenRepository examenRepository = Mockito.mock(ExamenRepository.class);
-        ExamenServicios services = new ExamenServicesImpl(examenRepository);
 
-        List<Examen> datos = List.of();
+        List<Examen> datos = Collections.emptyList();
+
         //Cuando se llame al metodo findAll() de la interfaz ExamenRepository, se devolvera la lista datos
-        Mockito.when(examenRepository.findAll()).thenReturn(datos);
-
-        Optional<Examen> examen = services.buscarExamenPorNombre("Matematicas");
+        when(examenRepository.findAll()).thenReturn(datos);
+        Optional<Examen> examen = examenServices.buscarExamenPorNombre("Matematicas");
+        assertFalse(examen.isPresent());
         try {
             assertEquals(Optional.empty(), examen);
             System.out.println("el examen es null con mockito");
@@ -112,3 +137,9 @@ class ExamenServicesImplTest {
 
     }
 }
+/*
+ El método get() y orElseThrow() son métodos de la clase Optional en Java. Ambos se utilizan para obtener el valor presente en el objeto Optional, pero se comportan de manera diferente cuando el objeto Optional está vacío (es decir, no contiene ningún valor).
+    *get(): Este método devolverá el valor presente en el objeto Optional si existe. Sin embargo, si el objeto Optional está vacío, lanzará una excepción NoSuchElementException.
+    *orElseThrow(): Este método también devolverá el valor presente en el objeto Optional si existe. Pero a diferencia de get(), permite personalizar la excepción que se lanza cuando el objeto Optional está vacío. Si no se proporciona una excepción personalizada, también lanzará una NoSuchElementException.
+
+ */
